--- a/control_inventario/app/static/css/menu.css
+++ b/control_inventario/app/static/css/menu.css
@@ -743,7 +743,8 @@ thead tr:nth-child(odd){
  
   #menu-icon.active {
     color: #d61313; 
-    transition: color 0.3s ease; 
+    transition: all 0.3s ease;
+    
     transform: scale(1.2);
     padding: 5px;
     
