--- a/control_inventario/app/templates/entradas/registro_tinacos_entradas.html
+++ b/control_inventario/app/templates/entradas/registro_tinacos_entradas.html
@@ -10,35 +10,32 @@
                     <input type="hidden" id="id_producto" name="id_producto">
                     
                     <div class="mb-3">
-                        <label for="proveedores" class="form-label">Proveedor</label><br>
-                        <select id="proveedores" name="proveedores" class="form-control" disabled >
-                            <option value="" id="proveedores">Selecciona una opción</option>
+                        <label for="proveedoresE" class="form-label">Proveedor</label><br>
+                        <select id="proveedoresE" name="proveedoresE" class="form-control" disabled >
+                            <option value="" id="proveedoresE">Selecciona una opción</option>
                             {% for proveedor in proveedores %}
                             <option value="{{ proveedor.id_proveedor }}">{{ proveedor.nombre }}</option>
                             {% endfor %}
                         </select> 
-                        <div class="invalid-feedback" id="proveedoresEntradaError"></div>
                     </div>
                     <div class="mb-3">
-                        <label for="producto" class="form-label">Nombre</label>
-                        <input type="txt" class="form-control" id="producto" name="producto" readonly>
-                        <div class="invalid-feedback" id="nombreError"></div>
+                        <label for="productoE" class="form-label">Nombre</label>
+                        <input type="txt" class="form-control" id="productoE" name="productoE" readonly>
                     </div>
                     <div class="mb-3">
-                        <label for="litros" class="form-label">Litros</label>
-                        <input type="txt" class="form-control" id="litros" name="litros" readonly>
-                        <div class="invalid-feedback" id="productoEntradaError"></div>
+                        <label for="litrosE" class="form-label">Litros</label>
+                        <input type="txt" class="form-control" id="litrosE" name="litrosE" readonly>
                     </div>
                     <div class="mb-3">
-                        <label for="color" class="form-label">Nombre</label>
-                        <input type="txt" class="form-control" id="color" name="color" readonly>
+                        <label for="colorE" class="form-label">Nombre</label>
+                        <input type="txt" class="form-control" id="colorE" name="colorE" readonly>
                         <div class="invalid-feedback" id="colorEntradaError"></div>
                     </div>
                     
                     <div class="mb-3">
-                        <label for="categorias" class="form-label">Categoría</label><br>
-                        <select id="categorias" name="categorias" class="form-control" disabled >
-                            <option value="" id="categorias">Selecciona una opción</option>
+                        <label for="categoriasE" class="form-label">Categoría</label><br>
+                        <select id="categoriasE" name="categoriasE" class="form-control" disabled >
+                            <option value="" id="categoriasE">Selecciona una opción</option>
                             {% for categoria in categorias %}
                             <option value="{{ categoria.id_categoria }}">{{ categoria.nombre }}</option>
                             {% endfor %}
