--- a/control_inventario/app/templates/salidas/registro_salidas_sanitarios.html
+++ b/control_inventario/app/templates/salidas/registro_salidas_sanitarios.html
@@ -9,29 +9,26 @@
                 <form action="/registro_sanitarios_salidas" method="post" onsubmit="return validarFormularioSalidasSanitarios()" >
                     <input type="hidden" id="id_producto" name="id_producto">
                     <div class="mb-3">
-                        <label for="proveedores" class="form-label">Proveedor</label><br>
-                        <select id="proveedores" name="proveedores" class="form-control" readonly >
-                            <option value="" id="proveedores">Selecciona una opción</option>
+                        <label for="proveedoresS" class="form-label">Proveedor</label><br>
+                        <select id="proveedoresS" name="proveedoresS" class="form-control" readonly >
+                            <option value="" id="proveedoresS">Selecciona una opción</option>
                             {% for proveedor in proveedores %}
                             <option value="{{ proveedor.id_proveedor }}">{{ proveedor.nombre }}</option>
                             {% endfor %}
                         </select> 
-                        <div class="invalid-feedback" id="proveedoresSalidaError"></div>
                     </div>
                     <div class="mb-3">
-                        <label for="producto" class="form-label">Nombre</label>
-                        <input type="txt" class="form-control" id="producto" name="producto" readonly>
-                        <div class="invalid-feedback" id="productoSalidaError"></div>
+                        <label for="productoS" class="form-label">Nombre</label>
+                        <input type="txt" class="form-control" id="productoS" name="productoS" readonly>
                     </div>
                     <div class="mb-3">
-                        <label for="categorias" class="form-label">Categoría</label><br>
-                        <select id="categorias" name="categorias" class="form-control" readonly>
-                            <option value="" id="categorias">Selecciona una opción</option>
+                        <label for="categoriasS" class="form-label">Categoría</label><br>
+                        <select id="categoriasS" name="categoriasS" class="form-control" readonly>
+                            <option value="" id="categoriasS">Selecciona una opción</option>
                             {% for categoria in categorias %}
                             <option value="{{ categoria.id_categoria }}">{{ categoria.nombre }}</option>
                             {% endfor %}
                         </select> 
-                        <div class="invalid-feedback" id="categoriasSalidaError"></div>
                     </div>
                     <div class="mb-3">
                         <label for="salida" class="form-label">Cantidad de salida</label>
