--- a/control_inventario/app/templates/muros/muros.html
+++ b/control_inventario/app/templates/muros/muros.html
@@ -27,7 +27,7 @@
             <li>GLACER Glamur Cerámico S.A de C.V <p class="titulo">Atlacomulco-Vías</p> </li>
 
             <div class="search-container">
-                <input type="text" id="search-input" class="" placeholder="Buscar..."><label for="search-input" class="jjj"><div class="lupa"><i id="buscar" class="bi bi-search"></i> </div></label>
+                <input type="text" id="search-input" class="" placeholder="Buscar..."><i id="buscar" class="bi bi-search"></i>
             </div>
             
         </ul>
