--- a/control_inventario/app/templates/productos/productos.html
+++ b/control_inventario/app/templates/productos/productos.html
@@ -29,7 +29,7 @@
            
 
             <div class="search-container">            
-                <input type="text" id="search-input" class="" placeholder="Buscar..."><label for="search-input" class="jjj"><div class="lupa"><i id="buscar" class="bi bi-search"></i> </div></label>
+                <input type="text" id="search-input" class="" placeholder="Buscar..."><i id="buscar" class="bi bi-search"></i>
             </div>
             
         </ul>
