--- a/control_inventario/app/templates/sanitarios/sanitarios.html
+++ b/control_inventario/app/templates/sanitarios/sanitarios.html
@@ -24,7 +24,7 @@
             <img class="Logovista" src="/static/img/logov.jpeg" alt="">
             <li>GLACER Glamur Cerámico S.A de C.V <p class="titulo">Atlacomulco-Vías</p> </li>
             <div class="search-container">
-                <input type="text" id="search-input" class="" placeholder="Buscar..."><label for="search-input" ><div class="lupa"><i id="buscar" class="bi bi-search"></i> </div></label>
+                <input type="text" id="search-input" class="" placeholder="Buscar..."><i id="buscar" class="bi bi-search"></i>
             </div>  
             
         </ul>
