--- a/control_inventario/app/templates/tinacos/actualizar_tinaco.html
+++ b/control_inventario/app/templates/tinacos/actualizar_tinaco.html
@@ -24,6 +24,9 @@
                             <option value="" id="proveedores">Selecciona una opción</option>
                             <option>Tinaco</option>
                             <option>Cisterna</option>
+                            <option>Bote</option>
+                            <option>Biodigestor</option>
+                            <option>Tapa para tinaco</option>
                         </select> 
                         <div class="invalid-feedback" id="productoErrorA"></div>
                     </div>
