--- a/control_inventario/app/templates/vitroblocks/actualizar_vitroblock.html
+++ b/control_inventario/app/templates/vitroblocks/actualizar_vitroblock.html
@@ -25,7 +25,7 @@
                             <option>Shade</option>
                             <option>Transportado</option>
                             <option>Perla</option>
-                            <option> </option>
+                            <option>.</option>
                         </select> 
                         <div class="invalid-feedback" id="tiposErrorA"></div>
                     </div>
