--- a/control_inventario/app/templates/vitroblocks/consulta_vitroblocks.html
+++ b/control_inventario/app/templates/vitroblocks/consulta_vitroblocks.html
@@ -130,7 +130,7 @@
         <ul class="pagination">
             {% if pagination.has_prev %}
             <li class="page-item">
-                <a class="page-link" href="{{ url_for('main.consulta_tinacos', page=pagination.prev_num, search=search) }}">
+                <a class="page-link" href="{{ url_for('main.consulta_vitroblocks', page=pagination.prev_num, search=search) }}">
                     <i class="bi bi-chevron-left" style="color: #111;"></i>
                 </a>
             </li>
@@ -141,7 +141,7 @@
             {% endif %}
     
             <li class="page-item {% if pagination.page == 1 %}active{% endif %}">
-                <a class="page-link" href="{{ url_for('main.consulta_tinacos', page=1) }}">1</a>
+                <a class="page-link" href="{{ url_for('main.consulta_vitroblocks', page=1) }}">1</a>
             </li>
     
             {% if pagination.page > 3 %}
@@ -153,7 +153,7 @@
             {% for page_num in range(pagination.page - 1, pagination.page + 1) %}
                 {% if page_num > 1 and page_num < pagination.pages %}
                 <li class="page-item {% if page_num == pagination.page %}active{% endif %}">
-                    <a class="page-link" href="{{ url_for('main.consulta_tinacos', page=page_num) }}">{{ page_num }}</a>
+                    <a class="page-link" href="{{ url_for('main.consulta_vitroblocks', page=page_num) }}">{{ page_num }}</a>
                 </li>
                 {% endif %}
             {% endfor %}
@@ -166,13 +166,13 @@
     
             {% if pagination.pages > 1 %}
             <li class="page-item {% if pagination.page == pagination.pages %}active{% endif %}">
-                <a class="page-link" href="{{ url_for('main.consulta_tinacos', page=pagination.pages) }}">{{ pagination.pages }}</a>
+                <a class="page-link" href="{{ url_for('main.consulta_vitroblocks', page=pagination.pages) }}">{{ pagination.pages }}</a>
             </li>
             {% endif %}
     
             {% if pagination.has_next %}
             <li class="page-item">
-                <a class="page-link" href="{{ url_for('main.consulta_tinacos', page=pagination.next_num, search=search) }}">
+                <a class="page-link" href="{{ url_for('main.consulta_vitroblocks', page=pagination.next_num, search=search) }}">
                     <i class="bi bi-chevron-right" style="color: #111;"></i>
                 </a>
             </li>
