--- a/control_inventario/app/templates/usuarios/usuarios.html
+++ b/control_inventario/app/templates/usuarios/usuarios.html
@@ -16,6 +16,7 @@
     <link href="https://cdn.jsdelivr.net/npm/smartwizard@6/dist/css/smart_wizard_all.min.css" rel="stylesheet"
         type="text/css" />
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css">
+    
 </head>
 <body>
     <div class="menu">
@@ -109,7 +110,11 @@
 
     
     
-
+    <script>
+        if (performance.navigation.type === 2) { // Detecta "atrás" del navegador
+            window.location.reload(); // Fuerza la recarga desde el servidor
+        }
+    </script>
     
 </body>
 </html>
