--- a/control_inventario/app/templates/vitroblocks/registrar_vitroblock.html
+++ b/control_inventario/app/templates/vitroblocks/registrar_vitroblock.html
@@ -26,7 +26,7 @@
                             <option>Shade</option>
                             <option>Transportado</option>
                             <option>Perla</option>
-                            <option> </option>
+                            <option>.</option>
                             
                         </select> 
                         <div class="invalid-feedback" id="tiposError"></div>
