--- a/control_inventario/app/templates/vitroblocks/consulta_vitroblocks.html
+++ b/control_inventario/app/templates/vitroblocks/consulta_vitroblocks.html
@@ -56,7 +56,7 @@
                             <th scope="col">Acciones</th>
                         </tr>
                     </thead>
-                    <tbody id="product-table-body">
+                    <tbody id="product-table-body" style="font-size: 0.96em;">
                         {% for vitroblock in vitroblocks %}
                         <tr>
                             
