--- a/control_inventario/app/templates/adhesivos/consulta_adhesivos.html
+++ b/control_inventario/app/templates/adhesivos/consulta_adhesivos.html
@@ -54,7 +54,7 @@
                             <th scope="col">Acciones</th>
                         </tr>
                     </thead>
-                    <tbody id="product-table-body">
+                    <tbody id="product-table-body" style="font-size: 0.96em;">
                         {% for adhesivo in adhesivos %}
                         <tr>
                             
