--- a/control_inventario/app/templates/categorias/consulta_categoria.html
+++ b/control_inventario/app/templates/categorias/consulta_categoria.html
@@ -47,7 +47,7 @@
                             <th style="text-align: center;">Operaciones</th>
                         </tr>
                     </thead>
-                    <tbody id="category-table-body">
+                    <tbody id="category-table-body" style="font-size: 0.96em;">
                         {% for categoria in categorias %}
                         <tr>
                             <td>{{categoria.nombre}}</td>
