--- a/control_inventario/app/templates/entradas/consulta_entradas.html
+++ b/control_inventario/app/templates/entradas/consulta_entradas.html
@@ -63,7 +63,7 @@
                             <th scope="col">Acciones</th>
                         </tr>
                     </thead>
-                    <tbody id="product-table-body">
+                    <tbody id="product-table-body" style="font-size: 0.96em;">
                         {% for entrada in entradas %}
                         <tr>
                             
