--- a/control_inventario/app/templates/productos/consulta_producto.html
+++ b/control_inventario/app/templates/productos/consulta_producto.html
@@ -60,7 +60,7 @@
                             <th scope="col">Acciones</th>
                         </tr>
                     </thead>
-                    <tbody id="product-table-body">
+                    <tbody id="product-table-body" style="font-size: 0.96em;">
                         {% for producto in productos %}
                         <tr>
                             
