--- a/control_inventario/app/templates/proveedores/consulta_proveedor.html
+++ b/control_inventario/app/templates/proveedores/consulta_proveedor.html
@@ -47,7 +47,7 @@
                             <th scope="col">Acciones</th>
                         </tr>
                     </thead>
-                    <tbody id="product-table-body">
+                    <tbody id="product-table-body" style="font-size: 0.96em;">
                         {% for proveedor in proveedores %}
                         <tr>
                             <td>{{proveedor.nombre}}</td>
@@ -144,7 +144,7 @@
 
     .pagination{
         width: 5%;
-        margin-left:64%;
+        margin-left:62%;
         margin-top: -5px;
     }
     
