--- a/control_inventario/app/templates/salidas/consulta_salidas.html
+++ b/control_inventario/app/templates/salidas/consulta_salidas.html
@@ -65,7 +65,7 @@
                             <th scope="col">Acciones</th>
                         </tr>
                     </thead>
-                    <tbody id="product-table-body">
+                    <tbody id="product-table-body" style="font-size: 0.96em;">
                         {% for salida in salidas %}
                         <tr>
                             
