--- a/control_inventario/app/templates/usuarios/consulta_usuario.html
+++ b/control_inventario/app/templates/usuarios/consulta_usuario.html
@@ -50,7 +50,7 @@
                             <th scope="col">Acciones</th>
                         </tr>
                     </thead>
-                    <tbody id="product-table-body">
+                    <tbody id="product-table-body" style="font-size: 0.96em;">
                     {% for usuario in usuarios %}
                         {% if usuario.id_usuario not in usuarios_activos %}
                         <tr>
