--- a/control_inventario/app/templates/productos/productos.html
+++ b/control_inventario/app/templates/productos/productos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GLACER Glamur Ceramico-Vias</title>
+    <title>GLACER Glamur Cerámico-Vias</title>
     <link rel="stylesheet" href="/static/css/menu.css">
     <link rel="stylesheet" href="/static/css/icon.css">
     <link rel="icon" href="/static/img/GLACER.png" type="image/png">
